# libKSC

./: .clang-format  .gitignore  CMakeLists.txt
include/ksc/: base.hpp  cipherunicorn.hpp  signalemitter.hpp
priv/priv/: base.hpp
src/: cipherunicorn.cpp  signalemitter.cpp
test/: CMakeLists.txt  TestCipherUnicorn.cpp
